Post-merge cleanup.