@@ -17,8 +17,8 @@
 package org.apache.sis.metadata;
 
 import java.util.Locale;
-import java.util.Set;
 import java.util.Collection;
+import java.util.Collections;
 import java.lang.reflect.Method;
 import org.opengis.annotation.UML;
 import org.opengis.annotation.Obligation;
@@ -64,7 +64,6 @@ import static java.util.logging.Logger.getLogger;
  *
  * @see InformationMap
  * @see MetadataStandard#asInformationMap(Class, KeyNamePolicy)
- * @see <a href="https://issues.apache.org/jira/browse/SIS-80">SIS-80</a>
  *
  * @since 0.3
  * @module
@@ -134,7 +133,7 @@ final class PropertyInformation<E> extends SimpleIdentifier           // Impleme
      */
     @SuppressWarnings({"unchecked","rawtypes"})
     PropertyInformation(final Citation standard, final String property, final Method getter,
-            final Class<E> elementType, final ValueRange range)
+                        final Class<E> elementType, final ValueRange range)
     {
         super(standard, property, getter.isAnnotationPresent(Deprecated.class));
         parent = getter.getDeclaringClass();
@@ -292,7 +291,7 @@ final class PropertyInformation<E> extends SimpleIdentifier           // Impleme
      */
     @Override
     public Collection<String> getParentEntity() {
-        return Set.of(getCodeSpace());
+        return Collections.singleton(getCodeSpace());
     }
 
     /**
